<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="TypographyEllipsis">
<string name="app_name">Synodroid Pro</string>
<string name="app_opensource">Opensource project</string>
<string name="app_url">http://code.google.com/p/synodroid-ds/</string>
<string name="connect_cant_connect">"Can't connect to {0}. Error is '{1}'."</string>
<string name="unknow_reason">&quot;An error occurred for an unknown reason&quot;</string>
<string name="connect_wrong_userpassword">"Wrong user or password. Please try again."</string>
<string name="connect_already_connected">"You're connected to another computer. Please reconnect."</string>
<string name="connect_nohost">&quot;Can't contact host. Please verify your settings.&quot;</string>
<string name="connect_error_title">"Error"</string>
<string name="connect_connecting2">"Connecting. Please wait..."</string>
<string name="connect_connecting">"Connecting to \n{0}\nPlease wait..."</string>
<string name="connect_ssl_error">"SSL error: {0}"</string>
<string name="action_deleting">&quot;Removing file %s&quot;</string>
<string name="action_clearall">&quot;Clearing all completed tasks...&quot;</string>
<string name="action_pausing">&quot;Pausing file %s&quot;</string>
<string name="action_resuming">&quot;Resuming file %s&quot;</string>
<string name="action_pauseall">&quot;Pausing all running tasks...&quot;</string>
<string name="action_resumeall">&quot;Resuming all paused tasks...&quot;</string>
<string name="menu_connect">Connect to</string>
<string name="menu_search">Search</string>
<string name="menu_clearall">Clear completed tasks</string>
<string name="menu_pauseall">Pause all</string>
<string name="menu_resumeall">Resume all</string>
<string name="dialog_title_action">Action</string>
<string name="menu_parameter">Settings</string>
<string name="err_unknown">Unknown error!</string>
<string name="connect_cant">&quot;You are not allowed to use this service&quot;</string>
<string name="label_nickname">Nickname</string>
<string name="label_protocol">Protocol</string>
<string name="label_host">Host</string>
<string name="label_port">Port</string>
<string name="label_username">Username</string>
<string name="label_password">Password</string>
<string name="label_refreshinterval">Interval</string>
<string name="hint_nickname">Set the nickname</string>
<string name="hint_protocol">Set the protocol to use</string>
<string name="hint_host">Set the hostname or IP</string>
<string name="hint_port">Set the port</string>
<string name="hint_username">The username</string>
<string name="hint_password">The password</string>
<string name="hint_refreshinterval">Refresh interval in second</string>
<string-array name="protocols_array"><item>HTTP</item>
<item>HTTPS</item>
</string-array>
<string name="button_cancel">Cancel</string>
<string name="label_dsm_version">Disk Station Manager</string>
<string name="hint_dsm_version">&quot;Set your DSM's version&quot;</string>
<string name="title_preference">Settings</string>
<string name="label_autorefresh">Auto refresh</string>
<string name="hint_autorefresh_on">Auto resfresh is enabled</string>
<string name="hint_autorefresh_off">Auto refresh is disabled</string>
<string name="title_cat_servers">Servers</string>
<string name="title_cat_general">General Options</string>
<string name="menu_delete_server">Delete server(s)</string>
<string-array name="sorts_array"><item>By date created</item>
<item>By user</item>
</string-array>
<string name="label_process_sort">Sort tasks</string>
<string name="hint_process_sort">Select how to sort tasks</string>
<string-array name="sort_array_values"><item>date</item>
<item>user</item>
</string-array>
<string name="button_delete">Delete</string>
<string name="menu_add_server">Add a server</string>
<string name="label_default_server_prefix">Server </string>
<string name="hint_default_server">Invalid server, click to edit</string>
<string name="menu_refresh">Refresh</string>
<string name="title_cat_connection">Public connection settings</string>
<string name="title_cat_connection_local">Local connection settings</string>
<string name="title_cat_server">General settings</string>
<string name="action_resume">Resume</string>
<string name="action_pause">Pause</string>
<string name="action_clear">Clear</string>
<string name="action_cancel">Cancel</string>
<string name="action_retry">Retry</string>
<string name="action_delete">Delete</string>
<string name="action_details">Show details...</string>
<string name="dialog_title_confirm">Confirm</string>
<string name="button_yes">Yes</string>
<string name="button_no">No</string>
<string name="label_sort_taskid">By creation date</string>
<string name="label_sort_filename">By filename</string>
<string name="label_sort_totalsize">By total size</string>
<string name="label_sort_currentsize">By current size</string>
<string name="label_sort_progress">By progress</string>
<string name="label_sort_uploadrate">By upload rate</string>
<string name="label_sort_currentrate">By download rate</string>
<string name="label_sort_timeleft">By time left</string>
<string name="label_sort_status">By status</string>
<string name="label_sort_username">By username</string>
<string name="label_asc_sort">Ascending sort</string>
<string name="hint_asc_sort_on">The sort is ascending</string>
<string name="hint_asc_sort_off">The sort is descending</string>
<string name="eula_hide">Hide</string>
<string name="action_detailing">Retrieving details of \'%s\'</string>
<string name="action_adding">Adding file %s</string>
<string name="detail_tab_general">General</string>
<string name="detail_tab_transfer">Transfer</string>
<string name="detail_tab_files">Files</string>
<string name="detail_filesize">File size</string>
<string name="detail_username">User name</string>
<string name="detail_filename">File name</string>
<string name="detail_destination">Destination</string>
<string name="detail_creationtime">Creation time</string>
<string name="detail_url">Url</string>
<string name="detail_originaltorrent">Original torrent</string>
<string name="detail_status">Status</string>
<string name="detail_transfered">Transferred</string>
<string name="detail_speed">Speed</string>
<string name="detail_peers">Peers (connected / total)</string>
<string name="detail_seeders_leechers">Seeders - Leechers</string>
<string name="detail_eta">Estimated time arrival</string>
<string name="detail_pieces">Pieces (current / total)</string>
<string name="detail_progress">Progress</string>
<string name="detail_status_waiting">Waiting</string>
<string name="detail_status_downloading">Downloading</string>
<string name="detail_status_seeding">Seeding</string>
<string name="detail_status_paused">Paused</string>
<string name="detail_status_finished">Finished</string>
<string name="detail_status_hash_checking">Hash checking</string>
<string name="detail_status_error">Error</string>
<string name="menu_about">About</string>
<string name="app_contributors">&quot;Project's contributors:&quot;</string>
<string name="app_status_project">Check the status of our project:</string>
<string name="button_ok">OK</string>
<string name="eula_view">Licence</string>
<string name="button_yesplease">Yes please</string>
<string name="button_nothanks">No thanks</string>
<string name="dialog_title_information">Information</string>
<string name="no_server_configured">No server has been configured or no server is appropriate for the current connection.\n\nWould you like to configure the system now ?</string>
<string name="detail_progress_upload">Upload:</string>
<string name="detail_progress_download">Download:</string>
<string name="detail_finished">Finished</string>
<string name="detail_unvailable">unvailable</string>
<string name="not_yet_implemented">Feature not yet implemented</string>
<string name="title_information">Information</string>
<string name="detail_unknown">Unknown</string>
<string name="seeding_time">Seeding time</string>
<string name="seeding_ratio">Seeding ratio (%)</string>
<string name="menu_destination">Destination</string>
<string name="ul_rate">Max upload rate (KB\\s)</string>
<string name="dl_rate">Max download rate (KB\\s)</string>
<string name="max_peers">Max number of peers</string>
<string name="priority">Download priority</string>
<string name="destination">Destination folder</string>
<string name="menu_add">Add Download</string>
<string name="menu_searchengine">Manage DSM search plugins</string>
<string name="add_dl_title">Add Downloads to your NAS</string>
<string name="add_dl_t1">Synodroid allows you to add download tasks to your NAS. There are multiple ways to do so, here are some of them:</string>
<string name="add_dl_st1">Direct Link Press in Browser</string>
<string name="add_dl_t2">From the Android Browser, when you press any links to .torrent or .nzb files, Synodroid will step in and allow your to download the file(s) associated to the link.</string>
<string name="add_dl_st2">Android Share Feature</string>
<string name="add_dl_t3">From any application installed on your phone (browsers, file manager, or any other third party application) if you share a link (any sort of links, not just .torrent/.nzb), Synodroid will appear in the list of applications where you can share the link to.</string>
<string name="add_dl_st3">File Selection</string>
<string name="add_dl_t4">From any good file management application or even from the official android download application, you can click a .torrent or .nzb file and the file will be uploaded to your NAS to start the download.</string>
<string name="add_dl_st4">Add Download Dialog (Pro only)</string>
<string name="add_dl_t5">From the Synodroid homepage, open the "Add Download" menu and type or paste any link that you want to start downloading. </string>
<string name="upgrade_title">Thanks for Upgrading to Pro</string>
<string name="upgrade_t1">Synodroid Pro contains a lot of features that are really useful and make it a worthy upgrade. This is the list of features that you got from upgrading:</string>
<string name="upgrade_st1">1. Add Download Dialog</string>
<string name="upgrade_t2">The Add Download Dialog is a very handy feature that allows you to type or paste any link to be downloaded by your NAS.</string>
<string name="upgrade_st2">2. Download Destination to Sub-Folder</string>
<string name="upgrade_t3">Synodroid Pro allows you to set the destination for your download to any folder on your NAS, not just the shared directories.</string>
<string name="upgrade_st3">3. Action on Multiple Files</string>
<string name="upgrade_t4">Synodroid Pro allows you to make actions on multiple files at the same time by selecting any file from the download list.</string>
<string name="upgrade_st4">4. Synology DSM Search Engine</string>
<string name="upgrade_t5">Integration with Synology\'s DSM Search engine is a feature accessible in Synodroid Pro. It also allows you to search on multiple site at the same time and to manage the list of site to search from.</string>
<string name="upgrade_st5">5. Preview Torrent Before Download</string>
<string name="upgrade_t6">Synodroid Pro gives you a preview of the torrent including the full file name for any torrent started with the search engine.</string>
<string name="upgrade_st6">6. Autodetect DSM Version</string>
<string name="upgrade_t7">Synodroid Pro can auto detect what DSM version you are running and adjust your configuration accordingly. This means that you won\'t have to change the DSM version of your connection every time you upgrade your NAS.</string>
<string name="tutorial_done">End tutorial</string>
<string name="title_cat_debug">Debugging</string>
<string name="upgrade_st8">7. Default Server Connection</string>
<string name="upgrade_t8">In Synodroid Pro, when you have multiple servers configured, you can set a default server that Synodroid will connect to automatically. This prevents Synodroid from asking you every time which server to connect to when one is more important than the others.</string>
</resources>