<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout01"
    android:layout_margin="5dip"
	android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
	<ScrollView 
	    android:id="@+id/about_scroll"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
        android:layout_above="@+id/btn_skip"
        android:isScrollContainer="true"
	    tools:ignore="HardcodedText" >
	
	    <LinearLayout
	        android:id="@+id/LinearLayout011"
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >
	
	        <TextView
	            android:id="@+id/upgrade_title"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginBottom="20dip"
	            android:layout_marginLeft="5dip"
	            android:layout_marginRight="5dip"
	            android:layout_marginTop="20dip"
	            android:text="@string/upgrade_title"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	
	        <TextView
	            android:id="@+id/upgradetext"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="20dip"
	            android:layout_marginTop="20dip"
	            android:text="@string/upgrade_t1"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
	
	        <TextView
	            android:id="@+id/upgradest1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"
	            android:layout_marginTop="20dip"
	            android:gravity="center_vertical"
	            android:text="@string/upgrade_st1"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
			
			<TextView
	            android:id="@+id/upgradetext_1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="20dip"
	            android:layout_marginTop="20dip"
	            android:text="@string/upgrade_t2"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
	        
	        <ImageView
			    android:id="@+id/img_dl4"
			    android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_marginBottom="20dip"
	            android:layout_marginTop="20dip"
	            android:src="@drawable/screen_add_dl_3" />
	        
	        <TextView
	            android:id="@+id/upgradest2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"
	            android:layout_marginTop="20dip"
	            android:gravity="center_vertical"
	            android:text="@string/upgrade_st2"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	        
	        <TextView
	            android:id="@+id/upgradetext_2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="20dip"
	            android:layout_marginTop="20dip"
	            android:text="@string/upgrade_t3"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
	        
	        <ImageView
			    android:id="@+id/img_dl2"
			    android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_marginBottom="20dip"
	            android:layout_marginTop="20dip"
	            android:src="@drawable/screen_upgrade_1" />
	        
	        <TextView
	            android:id="@+id/upgradest3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"
	            android:layout_marginTop="20dip"
	            android:gravity="center_vertical"
	            android:text="@string/upgrade_st3"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	        
	        <TextView
	            android:id="@+id/upgradetext_3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="20dip"
	            android:layout_marginTop="20dip"
	            android:text="@string/upgrade_t4"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
	        
	        <ImageView
			    android:id="@+id/img_dl3"
			    android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_marginBottom="20dip"
	            android:layout_marginTop="20dip"
	            android:src="@drawable/screen_upgrade_2" />
	        
	        <TextView
	            android:id="@+id/upgradest4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"
	            android:layout_marginTop="20dip"
	            android:gravity="center_vertical"
	            android:text="@string/upgrade_st4"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	        
	        <TextView
	            android:id="@+id/upgradetext_4"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="20dip"
	            android:layout_marginTop="20dip"
	            android:text="@string/upgrade_t5"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
	
			<TextView
	            android:id="@+id/upgradest5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"
	            android:layout_marginTop="20dip"
	            android:gravity="center_vertical"
	            android:text="@string/upgrade_st5"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	        
	        <TextView
	            android:id="@+id/upgradetext_5"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="20dip"
	            android:layout_marginTop="20dip"
	            android:text="@string/upgrade_t6"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
	        
	        <ImageView
			    android:id="@+id/img_dl5"
			    android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_marginBottom="20dip"
	            android:layout_marginTop="20dip"
	            android:src="@drawable/screen_search_engine_1" />
	        
	        <TextView
	            android:id="@+id/upgradest6"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"
	            android:layout_marginTop="20dip"
	            android:gravity="center_vertical"
	            android:text="@string/upgrade_st6"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	        
	        <TextView
	            android:id="@+id/upgradetext_7"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="20dip"
	            android:layout_marginTop="20dip"
	            android:layout_marginBottom="20dip"
	            android:text="@string/upgrade_t7"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
	        
	        <TextView
	            android:id="@+id/upgradest8"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dip"
	            android:layout_marginTop="20dip"
	            android:gravity="center_vertical"
	            android:text="@string/upgrade_st8"
	            android:textAppearance="?android:attr/textAppearanceMedium" />
	        
	        <TextView
	            android:id="@+id/upgradetext_8"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="20dip"
	            android:layout_marginTop="20dip"
	            android:text="@string/upgrade_t8"
	            android:textAppearance="?android:attr/textAppearanceSmall" />
	        
	        <ImageView
			    android:id="@+id/img_dl8"
			    android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_gravity="center"
	            android:layout_marginBottom="20dip"
	            android:layout_marginTop="20dip"
	            android:src="@drawable/screen_pro_7" />
	        
	    </LinearLayout>
	</ScrollView>
	<Button
	    android:id="@+id/btn_skip"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_gravity="fill_horizontal"
	    android:layout_alignParentBottom="true"
        android:paddingBottom="5dip"
	    android:paddingLeft="30dip"
	    android:paddingRight="30dip"
	    android:paddingTop="5dip"
	    android:text="@string/tutorial_done" />
</RelativeLayout>