<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/about_scroll"
    android:layout_width="fill_parent"
    android:layout_margin="5dip"
	android:layout_height="fill_parent"
    android:isScrollContainer="true"
    tools:ignore="HardcodedText" >

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/add_dl_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dip"
            android:layout_marginLeft="5dip"
            android:layout_marginRight="5dip"
            android:layout_marginTop="20dip"
            android:text="@string/add_dl_title"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/ad_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="20dip"
            android:text="@string/add_dl_t1"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/ad_st1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="20dip"
            android:gravity="center_vertical"
            android:text="@string/add_dl_st1"
            android:textAppearance="?android:attr/textAppearanceMedium" />
		
		<TextView
            android:id="@+id/ad_text_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="20dip"
            android:text="@string/add_dl_t2"
            android:textAppearance="?android:attr/textAppearanceSmall" />
       
        <TextView
            android:id="@+id/ad_st2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="20dip"
            android:gravity="center_vertical"
            android:text="@string/add_dl_st2"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView
            android:id="@+id/ad_text_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="20dip"
            android:text="@string/add_dl_t3"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <ImageView
            android:id="@+id/img_dl2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="20dip"
            android:src="@drawable/screen_add_dl_2" />
        
        <TextView
            android:id="@+id/ad_st3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="20dip"
            android:gravity="center_vertical"
            android:text="@string/add_dl_st3"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView
            android:id="@+id/ad_text_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="20dip"
            android:text="@string/add_dl_t4"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <ImageView
		    android:id="@+id/img_dl3"
		    android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="20dip"
            android:src="@drawable/screen_add_dl_1" />
        
        <TextView
            android:id="@+id/ad_st4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginTop="20dip"
            android:gravity="center_vertical"
            android:text="@string/add_dl_st4"
            android:textAppearance="?android:attr/textAppearanceMedium" />
        
        <TextView
            android:id="@+id/ad_text_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginTop="20dip"
            android:text="@string/add_dl_t5"
            android:textAppearance="?android:attr/textAppearanceSmall" />
        
        <ImageView
		    android:id="@+id/img_dl4"
		    android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dip"
            android:layout_marginTop="20dip"
            android:src="@drawable/screen_add_dl_3" />
        
    </LinearLayout>
</ScrollView>